Open and close modal still need to fix problem with reactivity for VisiblityController

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   --utilities-success: #27c200;
   --bg-secondaty-ios: #efeff1;
   --tertlary-dark: #6c6a7d;
+  --primary-valiant-judge: #ff842b;
 }
 
 h1 {
